cleaning up some main scss and working onto the menu styling

--- a/modules/_typography.scss
+++ b/modules/_typography.scss
@@ -1,1 +1,4 @@
-$font-main: 180px;
+@import url("https://fonts.googleapis.com/css?family=Space+Mono|Work+Sans");
+
+$font-main: "Space Mono", monospace;
+$font-secondary: "Work Sans", sans-serif;
