getting a POC of the strikthrough done

--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -3,11 +3,54 @@
 .menu {
   font-family: $font-main;
   font-size: 24px;
+  text-transform: capitalize;
   ul {
     list-style: none;
     a {
       color: $color-primary;
       text-decoration: none;
+    }
+    /*Hover effect heavliy borrowed from
+    https://codepen.io/tsimenis/pen/BKdENX */
+    li {
+      display: block;
+      width: 10%;
+    }
+    span {
+      position: relative;
+      display: block;
+      cursor: pointer;
+    }
+    span:before,
+    span:after {
+      content: "";
+      position: absolute;
+      width: 0%;
+      height: 1px;
+      top: 50%;
+      margin-top: -0.5px;
+      background: #fff;
+    }
+
+    span:before {
+      left: -2.5px;
+    }
+    span:after {
+      right: 2.5px;
+      background: #000;
+      transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+
+    span:hover:before {
+      background: #000;
+      width: 100%;
+      transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+
+    span:hover:after {
+      background: transparent;
+      width: 100%;
+      transition: 0s;
     }
   }
 }
