adding more meaningful links

--- a/styles.scss
+++ b/styles.scss
@@ -6,3 +6,8 @@ $font-size: 50px;
 body {
   background-color: $color-bg;
 }
+h1 {
+  font-family: $font-main;
+  font-size: 26px;
+  margin: 5px 0;
+}
