--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -13,8 +13,8 @@
     /*Hover effect heavliy borrowed from
     https://codepen.io/tsimenis/pen/BKdENX */
     li {
-      display: block;
-      width: 10%;
+      display: table;
+      width: auto;
     }
     span {
       position: relative;
@@ -26,7 +26,7 @@
       content: "";
       position: absolute;
       width: 0%;
-      height: 1px;
+      height: 2px;
       top: 50%;
       margin-top: -0.5px;
       background: #fff;
