--- a/styles.scss
+++ b/styles.scss
@@ -7,7 +7,8 @@ body {
   background-color: $color-bg;
 }
 h1 {
-  font-family: $font-main;
+  font-family: $font-secondary;
   font-size: 26px;
   margin: 5px 0;
+  text-transform: uppercase;
 }
