getting social media mostly there

--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -9,58 +9,61 @@
     text-decoration: none;
     cursor: pointer;
   }
-  .nav {
-    ul {
-      margin: 40px 0;
-      padding: 0;
-      list-style: none;
-      /*Hover effect heavliy borrowed from
+  ul.nav {
+    margin: 40px 0;
+    padding: 0;
+    list-style: none;
+    /*Hover effect heavliy borrowed from
     https://codepen.io/tsimenis/pen/BKdENX */
-      li {
-        display: table;
-        width: auto;
-      }
-      span {
-        position: relative;
-        display: block;
-        // cursor: pointer;
-      }
-      span:before,
-      span:after {
-        content: "";
-        position: absolute;
-        width: 0%;
-        height: 2px;
-        top: 50%;
-        margin-top: -0.5px;
-        background: #fff;
-      }
+    li {
+      display: table;
+      width: auto;
+    }
+    span {
+      position: relative;
+      display: block;
+      // cursor: pointer;
+    }
+    span:before,
+    span:after {
+      content: "";
+      position: absolute;
+      width: 0%;
+      height: 2px;
+      top: 50%;
+      margin-top: -0.5px;
+      background: #fff;
+    }
 
-      span:before {
-        left: -2.5px;
-      }
-      span:after {
-        right: 2.5px;
-        background: #000;
-        transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
-      }
+    span:before {
+      left: -2.5px;
+    }
+    span:after {
+      right: 2.5px;
+      background: #000;
+      transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
 
-      span:hover:before {
-        background: #000;
-        width: 100%;
-        transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
-      }
+    span:hover:before {
+      background: #000;
+      width: 100%;
+      transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
 
-      span:hover:after {
-        background: transparent;
-        width: 100%;
-        transition: 0s;
-      }
+    span:hover:after {
+      background: transparent;
+      width: 100%;
+      transition: 0s;
     }
   }
-  .social {
-    font-size: 12px;
+  ul.social {
+    font-size: 14px;
     cursor: pointer;
     color: $color-primary;
+    list-style-type: none;
+    li {
+      padding: 0 10px;
+      display: inline-block;
+    }
   }
 }
