getting content together

--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -32,7 +32,7 @@
       height: 2px;
       top: 50%;
       margin-top: -0.5px;
-      background: #fff;
+      background: #color-bg;
     }
 
     span:before {
@@ -40,12 +40,12 @@
     }
     span:after {
       right: 2.5px;
-      background: #000;
+      background: $color-primary;
       transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
     }
 
     span:hover:before {
-      background: #000;
+      background: $color-primary;
       width: 100%;
       transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
     }
