--- a/styles.scss
+++ b/styles.scss
@@ -8,7 +8,8 @@ body {
 }
 h1 {
   font-family: $font-secondary;
-  font-size: 26px;
+  font-size: 24px;
   margin: 5px 0;
   text-transform: uppercase;
+  font-weight: 900;
 }
