--- a/styles.scss
+++ b/styles.scss
@@ -22,3 +22,16 @@ p {
   font-family: $font-main;
   font-size: 14px;
 }
+input,
+textarea {
+  display: block;
+  width: 200px;
+  padding: 10px;
+  margin: 10px 0;
+  font-family: $font-main;
+  border: 1px solid $color-primary;
+  background: $color-bg;
+  &:active {
+    border: 1px solid $color-accent;
+  }
+}
