--- a/styles.scss
+++ b/styles.scss
@@ -18,10 +18,18 @@ h2 {
   font-family: $font-secondary;
   font-size: 48px;
   margin-top: 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 p {
   font-family: $font-main;
   font-size: 14px;
+}
+a {
+  color: $color-primary;
+  &:hover {
+    color: $color-secondary;
+  }
 }
 input,
 textarea {
@@ -56,4 +64,24 @@ input[type="submit"] {
       margin-right: 50px;
     }
   }
+}
+.bold {
+  font-weight: bold;
+}
+.wall {
+  display: flex;
+  flex-wrap: wrap;
+}
+.col {
+  width: 50%;
+  img {
+    max-width: 100%;
+    margin-right: 10px;
+  }
+}
+.detail {
+  margin-top: 60px;
+}
+.descrip-img {
+  width: 90%;
 }
