--- a/components/Brick/Brick.scss
+++ b/components/Brick/Brick.scss
@@ -3,6 +3,29 @@
 .brick {
   width: 100%;
   height: 100%;
+  position: relative;
+  &:hover {
+    cursor: pointer;
+    .caption {
+      text-decoration: underline;
+      display: block;
+    }
+    .overlay {
+      opacity: 0.5;
+    }
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    // transition: 0.5s ease;
+    background-color: #fff;
+  }
   img {
     max-width: 100%;
   }
@@ -20,11 +43,8 @@
     }
   }
   .caption {
+    display: hidden;
     margin-top: 10px;
     margin-left: 5px;
-    &:hover {
-      text-decoration: underline;
-      cursor: pointer;
-    }
   }
 }
