--- a/components/Brick/Brick.scss
+++ b/components/Brick/Brick.scss
@@ -2,7 +2,7 @@
 
 .brick {
   width: 100%;
-  height: 100%;
+  margin-bottom: 23px;
   position: relative;
   &:hover {
     cursor: pointer;
@@ -23,8 +23,7 @@
     height: 100%;
     width: 100%;
     opacity: 0;
-    // transition: 0.5s ease;
-    background-color: #fff;
+    background-color: $color-bg;
   }
   img {
     max-width: 100%;
