--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -31,8 +31,7 @@
   }
 }
 .about {
-  display: block;
-  margin: auto;
+  margin: 0 100px;
   img {
     max-width: 100%;
   }
@@ -41,14 +40,5 @@
     font-size: 16px;
     margin-right: 50%;
     margin-left: 10%;
-  }
-  .me {
-    width: 40%;
-    display: block;
-    margin: 0 auto;
-  }
-  .text {
-    width: 45%;
-    padding-left: 5%;
   }
 }
