--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -24,20 +24,16 @@
     &-33 {
       margin: 17px;
       width: 30%;
-      @media #{$break-sm} {
-        width: 100%;
-      }
-      @media #{$break-lg} {
-        width: 40%;
-      }
     }
     &-50 {
       width: 50%;
-      @media #{$break-sm} {
-        width: 100%;
-      }
     }
     &-100 {
+      width: 100%;
+    }
+  }
+  @media #{$break-sm} {
+    .gutter-50 {
       width: 100%;
     }
   }
