getting menu done for moble

--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -72,8 +72,12 @@
     h1 {
       text-align: center;
     }
+    ul {
+      text-align: center;
+    }
     ul.nav {
       li {
+        padding: 0 10px;
         display: inline-block;
       }
     }
