--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -76,6 +76,7 @@
       text-align: center;
     }
     ul.nav {
+      margin-bottom: 20px;
       li {
         padding: 0 10px;
         display: inline-block;
