fixing for the detail views

--- a/styles.scss
+++ b/styles.scss
@@ -77,7 +77,7 @@ input[type="submit"] {
   }
   img {
     display: block;
-    max-width: 100%;
+    width: 100%;
   }
   .description {
     display: block;
@@ -88,7 +88,7 @@ input[type="submit"] {
 .tech {
   img {
     display: block;
-    max-width: 100%;
+    width: 100%;
   }
 }
 .video {
