--- a/styles.scss
+++ b/styles.scss
@@ -100,8 +100,17 @@ a {
   }
 }
 .video {
+  &-container {
+    overflow: hidden;
+    position: relative;
+    height: 540px;
+  }
   iframe {
+    left: 0;
+    top: 0;
+    position: absolute;
     width: 95%;
+    height: 100%;
     @media #{$break-sm} {
       height: 200px;
     }
