--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -32,6 +32,7 @@
 .content {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 30px;
   .gutter {
     &-33 {
       margin: 5px;
@@ -39,6 +40,9 @@
     }
     &-50 {
       width: 50%;
+      p {
+        padding-left: 20px;
+      }
     }
     &-100 {
       width: 100%;
