--- a/components/Brick/Brick.scss
+++ b/components/Brick/Brick.scss
@@ -1,7 +1,7 @@
 @import "styles";
 
 .brick {
-  animation: fade 0.5s ease-in;
+  animation: fade 1s ease-in;
   animation-fill-mode: both;
   width: 100%;
   margin-bottom: 23px;
@@ -44,22 +44,39 @@
     }
   }
   .caption {
-    display: hidden;
+    position: relative;
     margin-top: 10px;
     margin-left: 5px;
+    animation: drop 1s ease-out;
+    animation-fill-mode: both;
   }
 }
 .brick:nth-child(2) {
   animation-delay: 0.5s;
 }
-.myClass:nth-child(3) {
+.brick:nth-child(3) {
   animation-delay: 1s;
 }
+
+// .caption:nth-child(2) {
+//   animation-delay: 1s;
+// }
+// .caption:nth-child(3) {
+//   animation-delay: 1.5s;
+// }
 @keyframes fade {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes drop {
+  0% {
+    top: -20px;
+  }
+  100% {
+    top: 0;
   }
 }
