getting rid of that background

--- a/styles.scss
+++ b/styles.scss
@@ -193,8 +193,10 @@ a {
 @keyframes background-fade {
   0% {
     opacity: 1;
+    z-index: 1;
   }
   100% {
     opacity: 0;
+    z-index: 0;
   }
 }
