readding in animation

--- a/styles.scss
+++ b/styles.scss
@@ -130,7 +130,7 @@ a {
   max-height: 110%;
   width: 100%;
   z-index: 1;
-  // animation: background-fade 2s ease-in;
+  animation: background-fade 2s ease-in;
   animation-fill-mode: both;
   animation-delay: 10s;
   h1 {
